# JobPilot-OpenManus

./: .coveragerc  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CI_PIPELINE_STATUS_AND_ROADMAP.md  CI_TEST_FIXES.md  CODE_OF_CONDUCT.md  DEVELOPMENT_SETUP.md  DUAL_STDOUT_HANDLING.md  FINISH_BACKEND_FIRST.md  FIX_DATA.md  JOB_API_INVESTIGATION_ROADMAP.md  JSEARCH_INTEGRATION_ARCHITECTURE.md  QUICK_FRONTEND_REFACTOR.md  README.md  RETRY_MECHANISMS_SUMMARY.md  ROADMAP.md  TESTING.md  TIMELINE_API_USAGE.md  TIMELINE_FRONTEND_COMPLETE.md  TIMELINE_TRACKING.md  WARP_TODO.md  check_tables.py  create_timeline_tables.py  generate_demo_jobs.py  jobpilot_demo.db  migrate_database.py  mock_data_results.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  requirements_jobpilot.txt  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  environment-corrupt-check.yaml  pre-commit.yaml  quick-ci.yml  test-suite.yml
api_research/analysis/: jsearch_analysis.md
api_research/implementations/: base_client.py  jsearch_client.py
api_research/tests/: test_jsearch.py
app/: bedrock.py  llm.py
app/agent/: browser.py  job_discovery.py  manus.py  toolcall.py
app/api/: applications.py  applications_simple.py  enhanced_jobs_api.py  leads_simple.py  resume_api.py  skill_bank.py  timeline.py  user_profiles.py
app/data/: base.py  company_matcher.py  company_repository.py  database.py  interaction_repository.py  migration_scripts.py  mock_data_generator.py  models.py  resume_models.py  resume_repository.py  skill_bank_models.py  skill_bank_repository.py
app/database/: __init__.py  manager.py
app/etl/: __init__.py  collector.py  config.py  loader.py  processor.py  scheduler.py  settings.py
app/flow/: planning.py
app/mcp/: server.py
app/prompt/: jobpilot.py
app/prompts/resume/: generate_achievements.md  generate_summary.md  optimize_resume_content.md
app/repositories/: resume_repository.py  skill_bank_repository.py
app/sandbox/core/: terminal.py
app/services/: llm_service.py  pdf_generation_service.py  resume_generation_service.py  resume_orchestrator_service.py  timeline_service.py
app/tool/: crawl4ai.py  planning.py  web_search.py
app/tool/chart_visualization/: README.md  README_ja.md  README_ko.md  README_zh.md  data_visualization.py  python_execute.py  tsconfig.json
app/tool/job_boards/: __init__.py  base_scraper.py  indeed_scraper.py
app/tool/job_scraper/: __init__.py  job_scraper_tool.py
app/tool/semantic_search/: __init__.py  semantic_search_tool.py  vector_store.py
app/utils/: retry.py
docs/: CI_SETUP.md  ETL_ARCHITECTURE.md  GITHUB_ACTIONS_TESTING_GUIDE.md  NEXT_STEPS.md  RESUME_UI_INTEGRATION_PLAN.md  TESTING_SUMMARY.md  TESTING_UNICODE_FIX.md  USERPROFILE_AND_RESUME_PLAN.md  USER_PROFILES_IMPLEMENTATION.md  database_setup.md
docs/architecture/: ETL_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/development/: NEXT_STEPS_RECOMMENDATIONS.md  RESUME_BUILDER_IMPLEMENTATION_ROADMAP.md  RESUME_UI_INTEGRATION_PLAN.md  TESTING.md
docs/plans/: CURRENT_WARP_ASSIGNMENT.md  JSEARCH_INTEGRATION_ARCHITECTURE.md  PHASE2_BACKEND_IMPLEMENTATION.md  README.md  RESUME_BUILDER_IMPLEMENTATION_ROADMAP.md  RESUME_SYSTEM_CHECKLIST.md  RESUME_SYSTEM_IMPLEMENTATION_PLAN.md  RESUME_UI_INTEGRATION_PLAN.md  ROADMAP.md  SKILL_BANK_CHECKLIST.md  SKILL_BANK_DATA_MODEL_DESIGN.md  SKILL_BANK_IMPLEMENTATION_PLAN.md  USERPROFILE_AND_RESUME_PLAN.md  USER_PROFILES_IMPLEMENTATION.md  USER_PROFILE_CHECKLIST.md  USER_PROFILE_IMPLEMENTATION_PLAN.md
frontend/: FRONTEND_REFACTOR_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
progress_reports/: AI_RESUME_GENERATION_COMPLETE.md  COMPREHENSIVE_TESTING_COMPLETE.md  DUAL_STDOUT_HANDLING.md  ETL_MIGRATION_COMPLETE.md  JOB_API_INVESTIGATION_ROADMAP.md  JSEARCH_INTEGRATION_ARCHITECTURE.md  MIGRATION_PROGRESS.md  PHASE2_BACKEND_IMPLEMENTATION.md  TIMELINE_API_USAGE.md  TIMELINE_FRONTEND_COMPLETE.md  TIMELINE_INTEGRATION_SUMMARY.md  TIMELINE_TRACKING.md
scripts/: README.md  check_db.py  generate_mock_data.py  run_tests.py  start.bat  start.sh  validate_formatting.py
tests/: conftest.py  test_backend_fastapi.py  test_core_components.py  test_integration.py  test_job_scrapers.py  test_jobpilot_migration.py  test_phase2_foundation.py  test_phase6.py  test_phase6_task2.py  test_phase6_task3.py  test_phase6_task4.py  test_phase7.py  test_timeline.py  test_transparent_interface.py
tests/backend/: test_user_profiles_ci.py  test_user_profiles_pytest.py
tests/e2e/: README.md
tests/utils/: server_manager.py  test_data.py  test_server.py
tool-scripts/: README.md
tool-scripts/database/: create_timeline_tables.py  migrate_database.py  migrate_resume_tables.py
tool-scripts/demos/: generate_demo_jobs.py  simple_demo_jobs.py
(+130 files in other folders)
